7 - Security/pod_with_docker_registry_secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-kubernetes-dashboard
spec:
  containers:
    - name: my-kubernetes-dashboard
      image: my-kubernetes-dashboard
  imagePullSecrets:
    - name: regcred
