7 - Security/pod_with_security_context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  securityContext:                  # for all containers
    runAsUser: 1000
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep", "3600"]
      securityContext:              # for specific container
        runAsUser: 360
        capabilities:               # container only, not the Pod level
          add: ["MAC_ADMIN"]
